feat: add catalog dependencies
